OR-0002: Update RuboCop rules, refactor ApplicationController for reuse, and fix offenses

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,5 +10,8 @@ Metrics/BlockLength:
     - 'spec/**/*.rb'
     - 'test/**/*.rb'
 
-Style/FrozenStringLiteralComment:
+Style/Documentation:
   Enabled: false
+
+Style/FrozenStringLiteralComment:
+  Enabled: true
